<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="lite_category_maintainer">Maintainer</string>
    <string name="lite_maintainer_title">NickName</string>
    <string name="lite_maintainer_donate_title">Donate</string>
    <string name="lite_maintainer_url">https://</string>
    <string name="lite_maintainer_donate_url">https://</string>
    <string name="about_lite_settings_title">About the system</string>
    <string name="about_lite_settings_summary">Links, information</string>
    <string name="lite_donate_title">Support</string>
    <string name="lite_donate_summary">Donate to support development and our server</string>
    <string name="lite_source_title">GitHub</string>
    <string name="lite_source_summary">Source</string>
    <string name="lite_download_title">Download</string>
    <string name="lite_download_summary">Download page</string>
    <string name="flashlight_on_call_title">Blink Flashlight on call</string>
    <string name="flashlight_on_call_disabled">Disabled</string>
    <string name="flashlight_on_call_not_dnd">Blink flashlight only in ringer mode</string>
    <string name="flashlight_on_call_dnd">Blink flashlight only in DND mode</string>
    <string name="flashlight_on_call_always">Always blink flashlight</string>
    <string name="lite_category_double_tap">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen">Lockscreen</string>
    <string name="double_tap_to_sleep_title">Statusbar</string>
    <string name="show_clear_all_recents_button_title">Clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_on">Show clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_off">Show AOSP clear all</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_ui_title">Recents</string>
    <string name="recents_ui_summary">Recents customizations</string>
    <string name="animation_p_title">Animation system</string>
    <string name="animation_p_summary">Animation in the style of Android P</string>
    <string name="volbtn_music_controls_title">Volume button Music control</string>
    <string name="volbtn_music_controls_summary">With screen off, long pressing the volume keys will seek tracks</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="hide_lockscreen_clock_title">Clock widget</string>
    <string name="hide_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="hide_lockscreen_date_title">Date widget</string>
    <string name="hide_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="hide_lockscreen_alarm_title">Alarm text</string>
    <string name="hide_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_clock_selection_digital">Default</string>
    <string name="lockscreen_clock_selection_digital_bold">Digital (bold)</string>
    <string name="lockscreen_clock_selection_analog">Analog</string>
    <string name="lockscreen_clock_selection_analog_lite">Analog (LiteOS)</string>
    <string name="lockscreen_clock_selection_sammy">Sammy</string>
    <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
    <string name="lockscreen_date_selection_title">Date style</string>
    <string name="lockscreen_date_selection_default_aosp">Default</string>
    <string name="lockscreen_date_selection_default">Default (bigger size)</string>
    <string name="lockscreen_date_selection_str_box">Semi-transparent box</string>
    <string name="lockscreen_date_selection_str_round">Semi-transparent box (round)</string>
	<string name="lite_settings_title">LiteOS</string>
	<string name="keywords_lite">LiteOS</string>
    <string name="statusbar_title">StatusBar</string>
    <string name="statusbar_summary">Options for customizing statusbar, qs, notifications etc.</string>
    <string name="buttons_title">Buttons</string>
    <string name="navbar_buttons_title">Navigation bar layout</string>
    <string name="navbar_buttons_summary">Configure on-screen navigation bar layout and custom buttons</string>
    <string name="buttons_summary">Configure on-screen navigation bar layout and custom buttons</string>
    <string name="cancel">Cancel</string>
    <string name="general_title">General</string>
    <string name="general_summary">Misc, UI/UX customization</string>
    <string name="lite_category_statusbar">Statusbar</string>
    <string name="lite_category_lockscreen">Lockscreen</string>
    <string name="lockscreen_clock_title">Clock,Data</string>
    <string name="lockscreen_clock_settings_title">Clock and Date</string>
    <string name="lockscreen_clock_settings_summary">clock and date settings</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_summary">Option to show net activity meter on status bar</string>
    <string name="network_traffic_state_title">Net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Enable</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="clock_category">Clock</string>
    <string name="status_bar_clock">Clock and Date</string>
    <string name="status_bar_clock_summary">Configure statusbar clock and date appearance</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
	<string name="battery_settings_title">Battery Settings</string>
    <string name="battery_settings_summary">Customize Battery styles</string>
    <string name="battery_style_title">Battery icon style</string>
    <string name="battery_style_summary">Change the look of the battery icon in the statusbar</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_text">Text</string>
    <string name="battery_style_hidden">Hidden</string>
    <string name="show_battery_percent_title">Show battery percentage</string>
    <string name="show_battery_percent_summary">Show battery level percentage near the icon</string>
    <string name="battery_percent_hidden">Hidden</string>
    <string name="battery_percent_outside">Outside</string>
    <string name="battery_percent_inside">Inside</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Open/close menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Search assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_in_app_search">In-app search</string>
    <string name="action_launch_camera">Open camera</string>
    <string name="action_last_app">Launch last app</string>
    <string name="action_splitscreen">Splitscreen</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_partial_screenshot">Partial screenshot</string>
    <string name="action_screen_off">Screen off</string>
   <string name="navigationbar_settings_title">Navigation bar</string>
   <string name="navigationbar_settings_summary">Configure navigation buttons</string>
   <string name="hardwarekeys_cat_title">Hardware Keys</string>
   <string name="navigation_bar_show_title">Show navigation bar</string>
   <string name="navigation_bar_show_summary">Force enable on-screen navigation bar</string>
   <string name="swap_navigation_keys_title">Swap keys</string>
   <string name="swap_navigation_keys_title_summary">Swap back and recents hardware keys</string>
   <string name="torch_power_button_gesture_title">Screen off power button torch</string>
   <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="button_backlight_cat">Button backlight</string>
    <string name="button_backlight_on_touch_only_title">Button touch</string>
    <string name="button_backlight_on_touch_only_summary">Enable backlight with timout only on button touch</string>
    <string name="button_backlight_enable_title">Enable</string>
    <string name="button_manual_brightness">Brightness level, disabled on value 0</string>
    <string name="backlight_timeout_title">Backlight timeout</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
</resources>