<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <Preference
        android:key="traffic"
        android:fragment="com.lite.settings.fragments.Traffic"
        android:title="@string/network_traffic_title"
        android:summary="@string/network_traffic_summary" />
        
    <Preference
        android:key="clock_settings"
        android:title="@string/status_bar_clock"
        android:summary="@string/status_bar_clock_summary"
        android:fragment="com.lite.settings.fragments.ClockDateSettings" />
        
    <Preference
        android:key="battery_settings"
        android:title="@string/battery_settings_title"
        android:summary="@string/battery_settings_summary"
        android:fragment="com.lite.settings.fragments.BatterySettings" />    

</PreferenceScreen>
