<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2018 LiteOS
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/navigationbar_settings_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >


    <SwitchPreference
        android:key="navigation_bar_show"
        android:title="@string/navigation_bar_show_title"
        android:summary="@string/navigation_bar_show_summary"
        android:persistent="false"
        android:disableDependentsState="true" />

    <PreferenceCategory
        android:key="button_backlight"
        android:title="@string/button_backlight_cat" >

    <SwitchPreference
        android:key="button_brightness"
        android:title="@string/button_backlight_enable_title"
        android:persistent="false"
        android:dependency="navigation_bar_show" />

    <com.lite.settings.preference.CustomSeekBarPreference
        android:key="button_manual_brightness_new"
        android:title="@string/button_manual_brightness"
        android:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false"
        android:dependency="navigation_bar_show" />

    <ListPreference
        android:dialogTitle="@string/backlight_timeout_title"
        android:entries="@array/backlight_timeout_entries"
        android:entryValues="@array/backlight_timeout_values"
        android:key="button_timeout"
        android:persistent="false"
        android:title="@string/backlight_timeout_title"
        android:dependency="navigation_bar_show" />

    <com.lite.settings.preference.SystemSettingSwitchPreference
        android:key="button_backlight_on_touch_only"
        android:title="@string/button_backlight_on_touch_only_title"
        android:summary="@string/button_backlight_on_touch_only_summary"
        android:defaultValue="false"
        android:dependency="navigation_bar_show" />

    </PreferenceCategory>

</PreferenceScreen>
