<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cardinal-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/general_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <ListPreference
        android:key="pref_scrollingcache"
        android:dialogTitle="@string/pref_scrollingcache_title"
        android:title="@string/pref_scrollingcache_title"
        android:summary="@string/pref_scrollingcache_summary"
        android:entries="@array/entries_scrollingcache" 
        android:entryValues="@array/values_scrollingcache"/>

    <com.lite.settings.preference.GlobalSettingSwitchPreference
        android:key="show_cpu_overlay"
        android:title="@string/show_cpu_title"
        android:summary="@string/show_cpu_summary"
        android:defaultValue="false" />

    <com.lite.settings.preference.SystemSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="true" />

</PreferenceScreen>
